[project]
name = "pycurb"
version = "0.1.0"
description = "A framework-agnostic python rate limit library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pycurb*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.137.0",
    "starlette>=1.0.0"
]
redis = ["redis>=8.0.0"]
all = ["pycurb[fastapi,redis]"]