[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycurb"
version = "0.1.0"
description = "A framework-agnostic Python rate limit library"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Oluwaseun Ogunsanu", email = "ogunsanu17@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "matplotlib>=3.10.9",
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.3",
    "mkdocs-material>=9.7.6",
    "mkdocstrings-python>=2.0.5",
    "mkdocstrings-python-xref>=2.1.1",
    "numpy>=2.2.6",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-benchmark[histogram]>=5.2.3",
    "pytest-django>=4.12.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.137.0",
    "starlette>=1.0.0"
]
django = ["django>=5.2.15"]
flask = [
    "flask>=3.0.0",
    "flask-login>=0.6.3"
]
redis = ["redis>=8.0.0"]
all = ["pycurb[redis,fastapi,django,flask]"]

[project.urls]
Homepage = "https://github.com/fore-site/pycurb"
Repository = "https://github.com/fore-site/pycurb"
Documentation = "https://pycurb.readthedocs.io/"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pycurb*"]

[tool.setuptools.package-data]
pycurb = ["py.typed"]

